# SyncBase

./: .gitignore  README.md  database.py  pyproject.toml
app/: main.py
app/core/: database.py
app/models/: __init__.py  file.py  file_version.py  folder.py  user.py
app/services/: file_service.py
tests/: conftest.py  test_file_service.py
